--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Contact me</title>
+<title>Contact Us</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -278,13 +278,6 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">
-    <span class="fa fa-home"></span>
-     
-    Home
-  </a>
-</li>
-<li>
   <a href="people.html">
     <span class="ion ion-android-contacts"></span>
      
@@ -343,7 +336,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Contact me</h1>
+<h1 class="title toc-ignore">Contact Us</h1>
 
 </div>
 
