--- a/contact.html
+++ b/contact.html
@@ -352,7 +352,7 @@ One Shields Ave<br />
 Davis, CA 95616<br />
 mail: <a href="mailto:mstetter@ucdavis.edu">mstetter(a)ucdavis.edu</a><br />
 twitter: <a href="https://twitter.com/mgstetter">@mgstetter</a><br />
-web: <a href="mstetter.github.io" class="uri">mstetter.github.io</a></p>
+web: <a href="https://mstetter.github.io">mstetter.github.io</a></p>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
 <script>
