--- a/news.html
+++ b/news.html
@@ -345,8 +345,9 @@ $(document).ready(function () {
 <ul>
 <li>November 27 lab website comes to life</li>
 </ul>
-<a class="twitter-timeline" href="https://twitter.com/MGStetter?ref_src=twsrc%5Etfw">Tweets by MGStetter</a>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<!--<a class="twitter-timeline" href="https://twitter.com/MGStetter?ref_src=twsrc%5Etfw">Tweets by MGStetter</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+-->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
 <script>
