job offer added

--- a/news.html
+++ b/news.html
@@ -343,7 +343,8 @@ $(document).ready(function () {
 
 <p> </p>
 <ul>
-<li>November 27 lab website comes to life</li>
+<li><strong>December 20</strong> Open PhD student position in the lab <a href="files/phd_offer2018.pdf">read more</a></li>
+<li><strong>November 27</strong> lab website comes to life</li>
 </ul>
 <!--<a class="twitter-timeline" href="https://twitter.com/MGStetter?ref_src=twsrc%5Etfw">Tweets by MGStetter</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
