--- a/reading.html
+++ b/reading.html
@@ -347,7 +347,7 @@ $(document).ready(function () {
 <h3>January</h3>
 <div id="thursday-december-3" class="section level4">
 <h4>Thursday December 3</h4>
-<p><a href="http://science.sciencemag.org/content/362/6420/1309">Kistler et al preprint</a> Multiproxy evidence highlights a complex evolutionary legacy of maize in South America</p>
+<p><a href="http://science.sciencemag.org/content/362/6420/1309">Kistler et al 2018</a> Multiproxy evidence highlights a complex evolutionary legacy of maize in South America</p>
 </div>
 </div>
 <div id="section" class="section level2">
