--- a/reading.html
+++ b/reading.html
@@ -343,6 +343,13 @@ $(document).ready(function () {
 
 <p> </p>
 <p>This page is intended for our future weekly journal club. The format for this journal club will probably be informal in a coffee place or pub with open discussion on the paper and beyond in a relaxed atmosphere. Anybody will be invited to join us. Until this journal club actually exists (starting in March 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.</p>
+<div id="february" class="section level3">
+<h3>February</h3>
+<div id="thursday-february-7" class="section level4">
+<h4>Thursday February 7</h4>
+<p><a href="https://www.pnas.org/content/116/6/2158">Chen, et al 2019</a> Allele frequency dynamics in a pedigreed natural population</p>
+</div>
+</div>
 <div id="january" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-31" class="section level4">
