--- a/reading.html
+++ b/reading.html
@@ -347,6 +347,10 @@ $(document).ready(function () {
 <h3>February</h3>
 <div id="thursday-february-7" class="section level4">
 <h4>Thursday February 7</h4>
+<p><a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1007717">Yeaman, et al 2018</a> Quantifying how constraints limit the diversity of viable routes to adaptation</p>
+</div>
+<div id="thursday-february-7-1" class="section level4">
+<h4>Thursday February 7</h4>
 <p><a href="https://www.pnas.org/content/116/6/2158">Chen, et al 2019</a> Allele frequency dynamics in a pedigreed natural population</p>
 </div>
 </div>
