--- a/reading.html
+++ b/reading.html
@@ -345,11 +345,19 @@ $(document).ready(function () {
 <p>This page is intended for our future weekly journal club. The format for this journal club will probably be informal in a coffee place or pub with open discussion on the paper and beyond in a relaxed atmosphere. Anybody will be invited to join us. Until this journal club actually exists (starting in March 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.</p>
 <div id="february" class="section level3">
 <h3>February</h3>
-<div id="thursday-february-7" class="section level4">
-<h4>Thursday February 7</h4>
+<div id="thursday-february-28" class="section level4">
+<h4>Thursday February 28</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/534123v1">Mackintosh, et al preprint</a> The determinants of genetic diversity in butterflies - Lewontin’s paradox revisited</p>
+</div>
+<div id="thursday-february-21" class="section level4">
+<h4>Thursday February 21</h4>
+<p><a href="https://onlinelibrary.wiley.com/doi/full/10.1111/mec.14699">Haenel, et al 2018</a> Meta‐analysis of chromosome‐scale crossover rate variation in eukaryotes and its significance to evolutionary genomics</p>
+</div>
+<div id="thursday-february-14" class="section level4">
+<h4>Thursday February 14</h4>
 <p><a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1007717">Yeaman, et al 2018</a> Quantifying how constraints limit the diversity of viable routes to adaptation</p>
 </div>
-<div id="thursday-february-7-1" class="section level4">
+<div id="thursday-february-7" class="section level4">
 <h4>Thursday February 7</h4>
 <p><a href="https://www.pnas.org/content/116/6/2158">Chen, et al 2019</a> Allele frequency dynamics in a pedigreed natural population</p>
 </div>
