--- a/publications.html
+++ b/publications.html
@@ -345,7 +345,10 @@ $(document).ready(function () {
 <p>   </p>
 <div id="preprint" class="section level2">
 <h2>Preprint</h2>
-<p>(Next one hopefully coming soon)</p>
+<ul>
+<li><a href="https://www.biorxiv.org/content/10.1101/547943v1">Convergent seed color adaptation during repeated domestication of an ancient new world grain</a><br />
+<strong>Markus G Stetter</strong>, M Vidal-Villarejo and K Schmid <em>bioRxiv</em></li>
+</ul>
 </div>
 <div id="section" class="section level2">
 <h2>2018</h2>
