news and reading

--- a/news.html
+++ b/news.html
@@ -341,11 +341,7 @@ $(document).ready(function () {
 </div>
 
 
-<p> </p>
-<ul>
-<li><strong>December 20</strong> Open PhD student position in the lab <a href="files/phd_offer2018.pdf">read more</a></li>
-<li><strong>November 27</strong> lab website comes to life</li>
-</ul>
+<p>  - <strong>March 1</strong> We are officially open for business - <strong>February 13</strong> New preprint online. Read it <a href="https://www.biorxiv.org/content/10.1101/547943v1">here</a> - <strong>December 20</strong> Open PhD student position in the lab <a href="files/phd_offer2018.pdf">read more</a> - <strong>November 27</strong> lab website comes to life</p>
 <!--<a class="twitter-timeline" href="https://twitter.com/MGStetter?ref_src=twsrc%5Etfw">Tweets by MGStetter</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 -->
