--- a/reading.html
+++ b/reading.html
@@ -342,7 +342,14 @@ $(document).ready(function () {
 
 
 <p> </p>
-<p>This page is intended for our future weekly journal club. The format for this journal club will probably be informal in a coffee place or pub with open discussion on the paper and beyond in a relaxed atmosphere. Anybody will be invited to join us. Until this journal club actually exists (starting in March 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.</p>
+<p>This page is intended for our future weekly journal club. The format for this journal club will probably be informal in a coffee place or pub with open discussion on the paper and beyond in a relaxed atmosphere. Anybody will be invited to join us. Until this journal club actually exists (starting late March 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.</p>
+<div id="march" class="section level3">
+<h3>March</h3>
+<div id="thursday-march-7" class="section level4">
+<h4>Thursday March 7</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/559419v1">Buffalo and Coop preprint</a> The Linked Selection Signature of Rapid Adaptation in Temporal Genomic Data</p>
+</div>
+</div>
 <div id="february" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-28" class="section level4">
