--- a/contact.html
+++ b/contact.html
@@ -345,14 +345,9 @@ $(document).ready(function () {
 <p></a><img src="own_images/me_2016.jpg" style="border:10px solid white"; width=200px></p>
 </div>
 <p><strong>Markus Stetter</strong><br />
-Dept. of Plant Sciences<br />
-262 Robbins Hall, Mail Stop 4<br />
-University of California<br />
-One Shields Ave<br />
-Davis, CA 95616<br />
-mail: <a href="mailto:mstetter@ucdavis.edu">mstetter(a)ucdavis.edu</a><br />
+University of Cologne Crop Evolution Botanical Institute Biozentrum Zülpicher Str. 47b 50674 Cologne/Germany mail: <a href="mailto:m.stetter@uni-koeln.de">m.stetter(a)uni-koeln.de</a><br />
 twitter: <a href="https://twitter.com/mgstetter">@mgstetter</a><br />
-web: <a href="https://mstetter.github.io">mstetter.github.io</a></p>
+web: <a href="https://cropevolution.org">cropevolution.org</a></p>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
 <script>
@@ -364,7 +359,7 @@ web: <a href="https://mstetter.github.io">mstetter.github.io</a></p>
 </script>
 
 
-<p>	&copy; Markus Stetter 2018 <A HREF="impressum.html">Impressum</A> </p>
+<p>	&copy; Markus Stetter 2019 <A HREF="impressum.html">Impressum</A> </p>
 
 
 
