--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@ $(document).ready(function () {
 </div>
 
 
-<p>Welcome to the soon-to-be Stetter lab in the <a href="http://www.botanik.uni-koeln.de/1634.html?&amp;L=1">Botanical Institute</a> at the <a href="https://www.uni-koeln.de/">University of Cologne</a>. We are interested in crop evolution and adaptation. We study the incomplete domestication of the South American pseudo-cereal, amaranth, and the domestication and cultivation history of maize. We use population and quantitative genetic methods to understand how wild plants became crops and how these crops spread across the globe.</p>
-<p>Read more about our <a href="research.html">research</a> and who we are on this site. If you like what we do and would like to join the lab please contact <a href="mailto:mgstetter@gmail.com">Markus</a> to find out more about openings and possibilities to apply for fellowships.</p>
+<p>Welcome to the Stetter lab in the <a href="http://www.botanik.uni-koeln.de/1634.html?&amp;L=1">Botanical Institute</a> at the <a href="https://www.uni-koeln.de/">University of Cologne</a>. We are interested in crop evolution and adaptation. We study the incomplete domestication of the South American pseudo-cereal, amaranth, and the domestication and cultivation history of maize. We use population and quantitative genetic methods to understand how wild plants became crops and how these crops spread across the globe.</p>
+<p>Read more about our <a href="research.html">research</a> and who we are on this site. If you like what we do and would like to join the lab please contact <a href="mailto:m.stetter@uni-koeln.de">Markus</a> to find out more about openings and possibilities to apply for fellowships.</p>
 <div class="figure">
 <img src="own_images/labcloud.png" />
 
@@ -358,7 +358,7 @@ $(document).ready(function () {
 </script>
 
 
-<p>	&copy; Markus Stetter 2018 <A HREF="impressum.html">Impressum</A> </p>
+<p>	&copy; Markus Stetter 2019 <A HREF="impressum.html">Impressum</A> </p>
 
 
 
