--- a/people.html
+++ b/people.html
@@ -355,6 +355,15 @@ $(document).ready(function () {
 <!-- break -->
 <p><br> <br> <br> <br> <br> <!-- break --></p>
 <div style="float: left">
+<p><img src="own_images/people/catia.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Cátia José Neves</strong>
+<div style="float: left">
+
+</div>
+<p>Cátia is visting the lab to study the evolution of diocey in Amaranthus <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<!-- break -->
+<div style="float: left">
 <p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Maybe you?</strong>
