--- a/people.html
+++ b/people.html
@@ -355,6 +355,15 @@ $(document).ready(function () {
 <!-- break -->
 <p><br> <br> <br> <br> <br> <!-- break --></p>
 <div style="float: left">
+<p><img src="own_images/people/jose.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>José Dias</strong>
+<div style="float: left">
+
+</div>
+<p>José is a PhD student studying introgression during grain amaranth domestication and its influence on the crop’s genome biology. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<!-- break -->
+<div style="float: left">
 <p><img src="own_images/people/catia.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Cátia José Neves</strong>
