--- a/reading.html
+++ b/reading.html
@@ -345,6 +345,10 @@ $(document).ready(function () {
 <p>This page is intended for our future weekly journal club. The format for this journal club will probably be informal in a coffee place or pub with open discussion on the paper and beyond in a relaxed atmosphere. Anybody will be invited to join us. Until this journal club actually exists (starting late April 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.</p>
 <div id="april" class="section level3">
 <h3>April</h3>
+<div id="thursday-april-18" class="section level4">
+<h4>Thursday April 18</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/594812v1">Roessler et al preprint</a> The Genomics of Selfing in Maize (Zea mays ssp. mays): Catching Purging in the Act</p>
+</div>
 <div id="thursday-april-4" class="section level4">
 <h4>Thursday April 4</h4>
 <p><a href="https://www.biorxiv.org/content/10.1101/588715v1">Xue et al preprint</a> Hybrid decay: a transgenerational epigenetic decline in vigor and viability triggered in backcross populations of teosinte with maize</p>
