--- a/contact.html
+++ b/contact.html
@@ -443,11 +443,14 @@ $(document).ready(function () {
 </div>
 
 
-<div style="float: left">
-<p></a>&lt;img src=“own_images/me_2016.jpg” style=“border:10px solid white”; width=200px&gt;</p>
-</div>
-<p><strong>Markus Stetter</strong><br />
-University of Cologne Crop Evolution Botanical Institute Biozentrum Zülpicher Str. 47b 50674 Cologne/Germany mail: <a href="mailto:m.stetter@uni-koeln.de">m.stetter(a)uni-koeln.de</a><br />
+<p><strong>Dr. Markus Stetter</strong></p>
+<p>University of Cologne<br />
+Crop Evolution<br />
+Botanical Institute<br />
+Biozentrum<br />
+Zülpicher Str. 47b<br />
+50674 Cologne/Germany<br />
+mail: <a href="mailto:m.stetter@uni-koeln.de">m.stetter(a)uni-koeln.de</a><br />
 twitter: <a href="https://twitter.com/mgstetter">@mgstetter</a><br />
 web: <a href="https://cropevolution.org">cropevolution.org</a></p>
 <!-- Global site tag (gtag.js) - Google Analytics -->
