--- a/people.html
+++ b/people.html
@@ -453,7 +453,7 @@ $(document).ready(function () {
 <div style="float: left">
 <p><a href="https://twitter.com/mgstetter"><img src="own_images/Twitter_logo_blue.png" style="width: 20px;"></a><a href="http://mstetter.github.io"><img src="own_images/Home_icon_black.png" style="width: 20px;"></a><a href="https://scholar.google.de/citations?user=yYKVZQQAAAAJ&hl=en"><img src="own_images/scholar.png" style="width: 30px;"></a><a href="http://github.com/mstetter"><img src="own_images/GitHub-Mark-32px.png" style="width:20px;"></a></p>
 </div>
-<p>Building a lab and trying to do cool science <a href="about.html">read more</a></p>
+<p>Markus is a group leader in the Botanical Institute of the University of Cologne <a href="about.html">read more</a></p>
 <!-- break -->
 <p><br> <br> <br> <br> <br> <!-- break --></p>
 <div style="float: left">
@@ -473,6 +473,17 @@ $(document).ready(function () {
 
 </div>
 <p>Cátia is visting the lab to study the evolution of diocey in Amaranthus <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<!-- break -->
+<div style="float: left">
+<p><img src="own_images/people/sophie.JPG" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Sophie Scherer</strong>
+<div style="float: left">
+
+</div>
+<p>Sophie is a biology undergraduate student doing her thesis research in the lab. She is studying the molecular control of seed color variation in amaranth.</p>
+<!-- break -->
+<p><br> <br> <br> <br> <br> <br> <br></p>
 <!-- break -->
 <div style="float: left">
 <p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
