fix sophie html

--- a/people.html
+++ b/people.html
@@ -477,7 +477,7 @@ $(document).ready(function () {
 <div style="float: left">
 <p><img src="own_images/people/sophie.JPG" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Sophie Scherer</strong>
+<strong>Sophie Schreiner</strong>
 <div style="float: left">
 
 </div>
