--- a/reading.html
+++ b/reading.html
@@ -444,7 +444,18 @@ $(document).ready(function () {
 
 
 <p> </p>
-<p>This page is intended for our future weekly journal club. The format for this journal club will probably be informal in a coffee place or pub with open discussion on the paper and beyond in a relaxed atmosphere. Anybody will be invited to join us. Until this journal club actually exists (starting late April 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.</p>
+<p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/HTsuGbneog1P3uWs5">Magnus</a> for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="june" class="section level3">
+<h3>June</h3>
+<div id="thursday-june-6" class="section level4">
+<h4>Thursday June 6</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/342352v3">Stankowski et al preprint</a> Widespread selection and gene flow shape the genomic landscape during a radiation of monkeyflowers</p>
+</div>
+</div>
+<div id="may" class="section level3">
+<h3>May</h3>
+<p>We took a little break to set up the lab and find a place</p>
+</div>
 <div id="april" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-18" class="section level4">
