--- a/people.html
+++ b/people.html
@@ -488,6 +488,15 @@ $(document).ready(function () {
 <div style="float: left">
 <p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
+<strong>Tom Winkler</strong>
+<div style="float: left">
+
+</div>
+<p>Tom is a biology undergraduate student conducting his thesis research in the lab. He is identifying transcription factor families in <em>Amaranthus</em> and related species. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<!-- break -->
+<div style="float: left">
+<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
 <strong>Maybe you?</strong>
 <div style="float: left">
 
