--- a/reading.html
+++ b/reading.html
@@ -447,6 +447,10 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/HTsuGbneog1P3uWs5">Magnus</a> for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="july" class="section level3">
 <h3>July</h3>
+<div id="thursday-july-25" class="section level4">
+<h4>Thursday July 25</h4>
+<p><a href="https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.12808">Hermisson and Pennings 2017</a> Soft sweeps and beyond: understanding the patterns and probabilities of selection footprints under rapid adaptation</p>
+</div>
 <div id="thursday-july-18" class="section level4">
 <h4>Thursday July 18</h4>
 <p><a href="https://www.nature.com/articles/s41559-019-0921-3.epdf?author_access_token=kznXiIAdgFg9lxODJs8hxtRgN0jAjWel9jnR3ZoTv0Ml7gUsC8aCYaDCupeTf4iBjACiGZ4_78WkjD4m9xJXsdGGTXJSAQ9cibBuRA_HJFVyBfxjb1E2BKNDKL2RXRa9mybyBy508AFZNrq0EuAWzQ%3D%3D">Gutaker et al 2019</a> The origins and adaptation of European potatoes reconstructed from historical genomes</p>
