--- a/people.html
+++ b/people.html
@@ -486,7 +486,7 @@ $(document).ready(function () {
 <p><br> <br> <br> <br> <br> <br> <br></p>
 <!-- break -->
 <div style="float: left">
-<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/tom.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Tom Winkler</strong>
 <div style="float: left">
