--- a/people.html
+++ b/people.html
@@ -472,7 +472,7 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Cátia is visting the lab to study the evolution of diocey in Amaranthus <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Cátia is visting the lab to study the evolution of dioecy in Amaranthus <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <!-- break -->
 <div style="float: left">
 <p><img src="own_images/people/sophie.JPG" style="width: 100px ;border:10px solid white"></p>
