--- a/reading.html
+++ b/reading.html
@@ -449,11 +449,11 @@ $(document).ready(function () {
 <h3>August</h3>
 <div id="thursday-august-22" class="section level4">
 <h4>Thursday August 22</h4>
-<p><a href="https://www.biorxiv.org/content/10.1101/732750v2">Christodoulaki et al preprint</a> Distance to trait optimum is a crucial factor determining the genomic signature of polygenic adaptation</p>
+<p><a href="https://www.biorxiv.org/content/10.1101/721340v1.full">Christodoulaki et al preprint</a> Distance to trait optimum is a crucial factor determining the genomic signature of polygenic adaptation</p>
 </div>
 <div id="thursday-august-15" class="section level4">
 <h4>Thursday August 15</h4>
-<p><a href="https://www.biorxiv.org/content/10.1101/721340v1.full">Rougemont et al preprint</a> Demographic history, linked selection, and recombination shape the genomic landscape of a broadly distributed Pacific salmon.</p>
+<p><a href="https://www.biorxiv.org/content/10.1101/732750v2">Rougemont et al preprint</a> Demographic history, linked selection, and recombination shape the genomic landscape of a broadly distributed Pacific salmon.</p>
 </div>
 <div id="thursday-august-8" class="section level4">
 <h4>Thursday August 8</h4>
