--- a/reading.html
+++ b/reading.html
@@ -445,8 +445,19 @@ $(document).ready(function () {
 
 <p> </p>
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/HTsuGbneog1P3uWs5">Magnus</a> for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="september" class="section level3">
+<h3>September</h3>
+<div id="thursday-september-3" class="section level4">
+<h4>Thursday September 3</h4>
+<p><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.5463">Mattila et al 2019</a> Impact of demography on linked selection in two outcrossing Brassicaceae species</p>
+</div>
+</div>
 <div id="august" class="section level3">
 <h3>August</h3>
+<div id="thursday-august-29" class="section level4">
+<h4>Thursday August 29</h4>
+<p><a href="https://www.pnas.org/content/116/12/5643.short">Yang et al 2019</a> The genetic architecture of teosinte catalyzed and constrained maize domestication</p>
+</div>
 <div id="thursday-august-22" class="section level4">
 <h4>Thursday August 22</h4>
 <p><a href="https://www.biorxiv.org/content/10.1101/721340v1.full">Christodoulaki et al preprint</a> Distance to trait optimum is a crucial factor determining the genomic signature of polygenic adaptation</p>
