--- a/people.html
+++ b/people.html
@@ -468,15 +468,6 @@ $(document).ready(function () {
 <div style="float: left">
 <p><img src="own_images/people/catia.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Cátia José Neves</strong>
-<div style="float: left">
-
-</div>
-<p>Cátia is visting the lab to study the evolution of dioecy in Amaranthus <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
-<!-- break -->
-<div style="float: left">
-<p><img src="own_images/people/sophie.JPG" style="width: 100px ;border:10px solid white"></p>
-</div>
 <strong>Sophie Schreiner</strong>
 <div style="float: left">
 
@@ -504,6 +495,12 @@ $(document).ready(function () {
 <p>Contact me if you are interested in joining the lab. <a href="mailto:mgstetter@gmail.com">contact me</a></p>
 <!-- break -->
 <p><br> <br> <br> <br> <br> <!-- break --></p>
+<div id="past-visitors" class="section level2">
+<h2>Past Visitors</h2>
+<ul>
+<li>Cátia José Neves</li>
+<li>Sabarna Bhattacharyya</li>
+</ul>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
 <script>
@@ -513,6 +510,7 @@ $(document).ready(function () {
 
   gtag('config', 'UA-96594188-4');
 </script>
+</div>
 
 
 <p>	&copy; Markus Stetter 2019 <A HREF="impressum.html">Impressum</A> </p>
