--- a/publications.html
+++ b/publications.html
@@ -469,7 +469,7 @@ Wenbin Mei, <strong>Markus G Stetter</strong>, Daniel J. Gates, Michelle C. Stit
 <h2>2017</h2>
 <ul>
 <li><p><a href="http://dx.doi.org/10.1016/j.cub.2017.06.048">How to make a domesticate</a><br />
-<strong>Markus G Stetter</strong>, Daniel J Gates, Wenbin Mei and Jeffrey Ross-Ibarra <em>Current Biology</em> <a href="10.7287/peerj.preprints.2902v1">Preprint</a></p></li>
+<strong>Markus G Stetter</strong>, Daniel J Gates, Wenbin Mei and Jeffrey Ross-Ibarra <em>Current Biology</em> <a href="https://peerj.com/preprints/2902">Preprint</a></p></li>
 <li><p><a href="http://dx.doi.org/10.1016/j.ympev.2016.12.029">Analysis of phylogenetic relationships and genome size evolution of the Amaranthus genus using GBS indicates the ancestors of an ancient crop</a><br />
 <strong>Markus G Stetter</strong> and Karl J Schmid <em>Molecular Phylogenetics and Evolution</em> <a href="http://dx.doi.org/10.1101/085472">Preprint</a></p></li>
 <li><p><a href="http://dx.doi.org/10.7717/peerj.2891">Increased root hair density by loss of WRKY6 in Arabidopsis thaliana</a><br />
