--- a/news.html
+++ b/news.html
@@ -443,16 +443,13 @@ $(document).ready(function () {
 </div>
 
 
-<p> </p>
-<ul>
-<li><strong>March 1</strong> We are officially open for business<br />
-</li>
-<li><strong>February 13</strong> New preprint online. Read it <a href="https://www.biorxiv.org/content/10.1101/547943v1">here</a><br />
-</li>
-<li><strong>December 20</strong> Open PhD student position in the lab <a href="files/phd_offer2018.pdf">read more</a><br />
-</li>
-<li><strong>November 27</strong> lab website comes to life</li>
-</ul>
+<p>  - <strong>September 15 -25</strong> Markus participates in a visit to Beijing, Nanjing and Shanghai presenting work from the lab<br />
+- <strong>September 15</strong> Jose presenting a poster at the <a href="https://www.botanikertagung2019.de/">meeting of the German Botanical Society</a><br />
+- <strong>June 19</strong> Markus Presenting at CEPLAS meeting in Duesseldorf<br />
+- <strong>March 1</strong> We are officially open for business<br />
+- <strong>February 13</strong> New preprint online. Read it <a href="https://www.biorxiv.org/content/10.1101/547943v1">here</a><br />
+- <strong>December 20</strong> Open PhD student position in the lab <a href="files/phd_offer2018.pdf">read more</a><br />
+- <strong>November 27</strong> lab website comes to life</p>
 <!--<a class="twitter-timeline" href="https://twitter.com/MGStetter?ref_src=twsrc%5Etfw">Tweets by MGStetter</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 -->
