--- a/people.html
+++ b/people.html
@@ -464,9 +464,8 @@ $(document).ready(function () {
 
 </div>
 <p>José is a PhD student studying introgression during grain amaranth domestication and its influence on the crop’s genome biology. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
-<!-- break -->
 <div style="float: left">
-<p><img src="own_images/people/catia.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/sophie.JPG" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Sophie Schreiner</strong>
 <div style="float: left">
