--- a/reading.html
+++ b/reading.html
@@ -447,6 +447,14 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/HTsuGbneog1P3uWs5">Magnus</a> for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="september" class="section level3">
 <h3>September</h3>
+<div id="thursday-september-26" class="section level4">
+<h4>Thursday September 26</h4>
+<p>No C.R.O.P</p>
+</div>
+<div id="thursday-september-19" class="section level4">
+<h4>Thursday September 19</h4>
+<p>No C.R.O.P</p>
+</div>
 <div id="thursday-september-12" class="section level4">
 <h4>Thursday September 12</h4>
 <p><a href="https://www.nature.com/articles/s41586-019-1520-9">Exposito-Alonso et al 2019</a> Natural selection on the Arabidopsis thaliana genome in present and future climates</p>
