--- a/publications.html
+++ b/publications.html
@@ -436,6 +436,8 @@ $(document).ready(function () {
 <div id="preprint" class="section level2">
 <h2>Preprint</h2>
 <ul>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/817791v1">Loss of diversity and accumulation of genetic load in doubled-haploid lines from European maize landrace</a><br />
+Leo Zeitler, Jeffrey Ross-Ibarra and <strong>Markus G Stetter</strong></p></li>
 <li><p><a href="https://doi.org/10.1101/777623">Comparative evolutionary analysis and prediction of deleterious mutation patterns between sorghum and maize</a><br />
 Roberto Lozano, Elodie Gazave, Jhonathan P.R. dos Santos, <strong>Markus G Stetter</strong>, Ravi Valluru, Nonoy Bandillo, Samuel B. Fernandes, Patrick J. Brown, Nadia Shakoor, Todd C. Mockler, Jeffrey Ross-Ibarra, Edward S. Buckler and Michael A. Gore <em>bioRxiv</em></p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/618389v1">The temporal dynamics of background selection in non-equilibrium populations</a><br />
